--- a/src/resources/views/user/headerUser.ejs
+++ b/src/resources/views/user/headerUser.ejs
@@ -74,7 +74,8 @@
                                                             DANH MỤC SẢN PHẨM
                                                         </a>
                                                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                                            <li><a class="dropdown-item" href="#">Sản phẩm</a></li>
+                                                            <li><a class="dropdown-item" href="/all_product">Sản
+                                                                    phẩm</a></li>
                                                             <li><a class="dropdown-item" href="#">Phụ kiện</a></li>
                                                             <li><a class="dropdown-item" href="#">Something else
                                                                     here</a></li>
@@ -100,8 +101,8 @@
                                             <a href="/cart" class="btn btn-secondary cart">gio hang</a>
                                             <a href="/order" class="btn btn-outline-primary cart">Đơn hàng</a>
                                         </div>
-                                        
-                                        
+
+
 
                                     </div>
             </div>
