--- a/src/resources/views/user/all_product.ejs
+++ b/src/resources/views/user/all_product.ejs
@@ -1,5 +1,33 @@
 <%- include('headerUser.ejs') %>
-    <div class="container" style="margin-top: 150px; margin-bottom: 150px">
+    <div class="container" style="margin-top: 50px; margin-bottom: 150px">
+        <div class="col-md-6 mt-2 ">
+            <form action="/search_product_all_user" id="combined-form" method="get"
+                class="sidebar-form_1 mx-2">
+                <div class="input-group mb-3" style="width: 80%;">
+                    <input type="text" name="name" class="form-control" placeholder="Nhập tên"
+                        aria-label="Recipient's username" aria-describedby="button-addon2">
+
+                        <input type="text" name="mau_sac_name" class="form-control" placeholder="Màu sắc"
+                        aria-label="Recipient's username" aria-describedby="button-addon2">
+
+                        <input type="text" name="dung_luong_name" class="form-control" placeholder="Dung lượng"
+                        aria-label="Recipient's username" aria-describedby="button-addon2">
+
+                    <button class="btn btn-outline-secondary" type="submit" id="button-addon2"><i
+                            class="fa fa-search"></i></button>
+                </div>
+            </form>
+            <form action="/searchPrice_product_all_user" id="combined-form" method="get"
+                class="sidebar-form_1 mx-2">
+                <div class="input-group mb-3" style="width: 80%;">
+                    <input type="text" name="min_price" class="form-control" placeholder="giá trị từ"
+                        aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <input type="text" name="max_price" class="form-control" placeholder="đến"
+                        aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary" type="submit" id="button-addon2"><i
+                            class="fa fa-search"></i></button>
+                </div>
+            </form>
         <div class="danh_sach_san_pham mt-5">
             <h3 class="mt-5"> Danh sách sản phẩm </h3>
             <div class="row">
@@ -15,7 +43,7 @@
                                         <%= product.ten_san_pham %> màu <%= product.ten_mau_sac %>
                                     </h5>
                                     <div class="card-body d-flex p-0">
-                                        <p class="card-link">Ram 8GB</p>
+                
                                         <p class="card-link">SSD <%= product.ten_dung_luong %>
                                         </p>
                                     </div>
