--- a/src/resources/views/user/chi_tiet_sp.ejs
+++ b/src/resources/views/user/chi_tiet_sp.ejs
@@ -1,6 +1,6 @@
 <%- include('headerUser.ejs') %>
 
-    <div class="container" style="margin-top: 150px; margin-bottom: 150px">
+    <div class="container" style=" margin-bottom: 150px">
         <div class="row">
             <p class="title">
                 <%= productDetail.ten_san_pham %>
