--- a/src/resources/views/user/home.ejs
+++ b/src/resources/views/user/home.ejs
@@ -1,5 +1,5 @@
 <%- include('headerUser.ejs') %>
-    <div class="banner owl-carousel owl-theme" style="margin-top: 89px;">
+    <div class="banner owl-carousel owl-theme" style="padding: 0px;">
 
         <div class="slide" style="background-image: url('/img/bgr1.png') !important; height: 400px;">
             <div class="slide-content">
