--- a/src/resources/views/user/all_product.ejs
+++ b/src/resources/views/user/all_product.ejs
@@ -1,68 +1,96 @@
 <%- include('headerUser.ejs') %>
-    <div class="container" style="margin-top: 50px; margin-bottom: 150px">
-        <div class="col-md-6 mt-2 ">
-            <form action="/search_product_all_user" id="combined-form" method="get"
-                class="sidebar-form_1 mx-2">
-                <div class="input-group mb-3" style="width: 80%;">
-                    <input type="text" name="name" class="form-control" placeholder="Nhập tên"
-                        aria-label="Recipient's username" aria-describedby="button-addon2">
-
-                        <input type="text" name="mau_sac_name" class="form-control" placeholder="Màu sắc"
-                        aria-label="Recipient's username" aria-describedby="button-addon2">
-
-                        <input type="text" name="dung_luong_name" class="form-control" placeholder="Dung lượng"
-                        aria-label="Recipient's username" aria-describedby="button-addon2">
-
-                    <button class="btn btn-outline-secondary" type="submit" id="button-addon2"><i
-                            class="fa fa-search"></i></button>
-                </div>
-            </form>
-            <form action="/searchPrice_product_all_user" id="combined-form" method="get"
-                class="sidebar-form_1 mx-2">
-                <div class="input-group mb-3" style="width: 80%;">
-                    <input type="text" name="min_price" class="form-control" placeholder="giá trị từ"
-                        aria-label="Recipient's username" aria-describedby="button-addon2">
-                    <input type="text" name="max_price" class="form-control" placeholder="đến"
-                        aria-label="Recipient's username" aria-describedby="button-addon2">
-                    <button class="btn btn-outline-secondary" type="submit" id="button-addon2"><i
-                            class="fa fa-search"></i></button>
-                </div>
-            </form>
-        <div class="danh_sach_san_pham mt-5">
-            <h3 class="mt-5"> Danh sách sản phẩm </h3>
+    <div class="container" style="margin-top: 20px; margin-bottom: 150px">
+        <div class=" mt-2 ">
             <div class="row">
-                <% if (data && data.length> 0) { %>
-                    <% data.forEach(function (product, index) { %>
-                        <div class="col-md-3 mt-5">
-                            <div class="card">
-                                <a href="/chi_tiet_sp/<%= product.id %>">
-                                    <img src="imgUpload/<%= product.hinh_anh %>" class="card-img-top" alt="...">
-                                </a>
-                                <div class="card-body">
-                                    <h5 class="card-title">
-                                        <%= product.ten_san_pham %> màu <%= product.ten_mau_sac %>
-                                    </h5>
-                                    <div class="card-body d-flex p-0">
-                
-                                        <p class="card-link">SSD <%= product.ten_dung_luong %>
-                                        </p>
-                                    </div>
-                                    <ul class="list-group list-group-flush">
-                                        <li class="list-group-item">Giá: <%= product.gia_ban %> vnd</li>
-                                    </ul>
-                                    <div class="text-center d-flex">
-                                        <a href="/add_to_cart/<%= product.chi_tiet_id %>" class="btn btn-primary">Thêm
-                                            với giỏ hàng</a>
-                                        <a href="/dat_hang/<%= product.chi_tiet_id %>" class="btn btn-success">Mua
-                                            ngay</a>
+                <div class="col-lg-6">
+                </div>
+                <div class="col-lg-6">
+                    <div>
+                        <form action="/search_product_all_user" id="combined-form" method="get"
+                            class="sidebar-form_1 mx-2">
+                            <div class="input-group mb-3" style="width: 80%;">
+                                <input type="text" name="name" class="form-control" placeholder="Nhập tên"
+                                    aria-label="Recipient's username" aria-describedby="button-addon2">
+
+                                <input type="text" name="mau_sac_name" class="form-control" placeholder="Màu sắc"
+                                    aria-label="Recipient's username" aria-describedby="button-addon2">
+
+                                <!-- <input type="text" name="dung_luong_name" class="form-control"
+                                    placeholder="Hãng sản xuất" aria-label="Recipient's username"
+                                    aria-describedby="button-addon2"> -->
+                                <select class="form-control" name="nha_san_xuat_name" id="">
+                                    <option value=""> Nhà sản xuất </option>
+                                    <% if (nhaSanXuatList && nhaSanXuatList.length> 0) { %>
+                                        <% nhaSanXuatList.forEach(function (nhaSanXuatList, index) { %>
+                                            <option value="<%- nhaSanXuatList.ten_nha_san_xuat %>"><%-
+                                                    nhaSanXuatList.ten_nha_san_xuat %>
+                                            </option>
+                                            <% }); %>
+                                                <% } else { %>
+
+                                                    <p>Không có dữ liệu</p>
+
+                                                    <% } %>
+                                </select>
+
+                                <button class="btn btn-outline-secondary" type="submit" id="button-addon2"><i
+                                        class="fa fa-search"></i></button>
+                            </div>
+                        </form>
+                    </div>
+                    <div>
+                        <form action="/searchPrice_product_all_user" id="combined-form" method="get"
+                            class="sidebar-form_1 mx-2">
+                            <div class="input-group mb-3" style="width: 80%;">
+                                <input type="text" name="min_price" class="form-control" placeholder="giá trị từ"
+                                    aria-label="Recipient's username" aria-describedby="button-addon2">
+                                <input type="text" name="max_price" class="form-control" placeholder="đến"
+                                    aria-label="Recipient's username" aria-describedby="button-addon2">
+                                <button class="btn btn-outline-secondary" type="submit" id="button-addon2"><i
+                                        class="fa fa-search"></i></button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+            <div class="danh_sach_san_pham">
+                <h3 class="mt-2"> Danh sách sản phẩm </h3>
+                <div class="row">
+                    <% if (data && data.length> 0) { %>
+                        <% data.forEach(function (product, index) { %>
+                            <div class="col-md-3 mt-5">
+                                <div class="card">
+                                    <a href="/chi_tiet_sp/<%= product.id %>">
+                                        <img src="imgUpload/<%= product.hinh_anh %>" class="card-img-top" alt="...">
+                                    </a>
+                                    <div class="card-body">
+                                        <h5 class="card-title">
+                                            <%= product.ten_san_pham %> màu <%= product.ten_mau_sac %>
+                                        </h5>
+                                        <div class="card-body d-flex p-0">
+
+                                            <p class="card-link">SSD <%= product.ten_dung_luong %>
+                                            </p>
+                                        </div>
+                                        <ul class="list-group list-group-flush">
+                                            <li class="list-group-item">Giá: <%= product.gia_ban %> vnd</li>
+                                        </ul>
+                                        <div class="text-center d-flex">
+                                            <a href="/add_to_cart/<%= product.chi_tiet_id %>"
+                                                class="btn btn-primary">Thêm
+                                                với giỏ hàng</a>
+                                            <a href="/dat_hang/<%= product.chi_tiet_id %>" class="btn btn-success">Mua
+                                                ngay</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <% }); %>
-                            <% } else { %>
-                                <p colspan="7">Không có dữ liệu</p>
-                                <% } %>
+                            <% }); %>
+                                <% } else { %>
+                                    <p colspan="7">Không có dữ liệu</p>
+                                    <% } %>
+                </div>
             </div>
         </div>
     </div>
