--- a/src/resources/views/user/cart.ejs
+++ b/src/resources/views/user/cart.ejs
@@ -1,5 +1,5 @@
 <%- include('headerUser.ejs') %>
-    <div class="container" style="margin-top: 150px; margin-bottom: 150px">
+    <div class="container" style="margin-bottom: 150px">
         <table style="margin-top: 50px;" class="table table-PW table-striped table-hover table-borderless align-middle">
             <thead class="table-light">
                 <caption>Danh sách sản phẩm có trong giỏ hàng </caption>
