--- a/src/resources/views/user/dat_hang.ejs
+++ b/src/resources/views/user/dat_hang.ejs
@@ -1,6 +1,6 @@
 <%- include('headerUser.ejs') %>
 
-    <div class="container" style="margin-top: 150px; margin-bottom: 150px">
+    <div class="container" style=" margin-bottom: 150px">
         <div>
             <h3 class="text-start">ĐẶT HÀNG </h3>
             <p>Địa chỉ: <span id="ho_ten">
@@ -115,7 +115,7 @@
             var tong_tien_thanh_toan = parseFloat(document.getElementById("tong_tien_thanh_toan").innerText);
             var san_pham_id = '<%= product_datHang.chi_tiet_id %>'
             console.log(soDienThoai)
-         
+
             fetch('/dat_hang2', {
                 method: 'POST',
                 headers: {
